<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res/com.aizi.yingerbao" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink_new"
    tools:context="${relativePackage}.${activityClass}" >

    <com.aizi.yingerbao.view.TopBarView  
        android:id="@+id/explaintopbar"  
        android:layout_width="match_parent"  
        android:layout_height="wrap_content"  
        custom:titleText="@string/title_activity_explain"   
        custom:titleSize="@dimen/title_text_size"   
        custom:titleColor="@color/white"   
        custom:leftBtn="@drawable/smarthome_add_device_back_nor"/> 
    
    	<ScrollView 
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content"
	         android:layout_marginTop="10dp"
	         android:layout_marginBottom="10dp"
	         android:layout_below="@id/explaintopbar"> 
         
   	     <LinearLayout 
            android:id="@+id/temprature_list"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

   	         <LinearLayout 
		        android:id="@+id/explain_breath_stop"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:orientation="vertical">
		        
   	            <TextView 
			         android:id="@+id/explain_breathstop_title"
			         android:layout_width="match_parent"
			         android:layout_height="wrap_content"
			         android:textColor="@color/white"
			         android:text="@string/explain_title_breath_stop"
			         android:textSize="@dimen/explain_text_size_title"
			         android:layout_marginTop="30dp"/>
		        
                 <TextView 
			        android:id="@+id/explain_breathstop_content"
			        android:layout_height="wrap_content"
			        android:layout_width="wrap_content"
			        android:layout_marginLeft="20dp"
			        android:textSize="@dimen/explain_text_size_content"
			        android:text="@string/explain_content_breath_stop"
			        android:textColor="@color/white"/>
                 
	        
                 </LinearLayout>
                 
   	         
   	          <LinearLayout 
		        android:id="@+id/explain_breath_alarm"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:orientation="vertical">
		        
   	            <TextView 
			         android:id="@+id/explain_breath_alarm_title"
			         android:layout_width="match_parent"
			         android:layout_height="wrap_content"
			         android:textColor="@color/white"
			         android:text="@string/explain_title_breath_alarm"
			         android:textSize="@dimen/explain_text_size_title"
			         android:layout_marginTop="30dp"/>
		        
                 <TextView 
			        android:id="@+id/explain_breath_alarm_content"
			        android:layout_height="wrap_content"
			        android:layout_width="wrap_content"
			        android:layout_marginLeft="20dp"
			        android:textSize="@dimen/explain_text_size_content"
			        android:text="@string/explain_content_breath_alarm"
			        android:textColor="@color/white"/>
                 
                 </LinearLayout>
                 
   	          <LinearLayout 
		        android:id="@+id/explain_breath_bpm"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:orientation="vertical">
		        
   	            <TextView 
			         android:id="@+id/explain_breath_bpm_title"
			         android:layout_width="match_parent"
			         android:layout_height="wrap_content"
			         android:textColor="@color/white"
			         android:text="@string/explain_title_breath_bpm"
			         android:textSize="@dimen/explain_text_size_title"
			         android:layout_marginTop="30dp"/>
		        
                 <TextView 
			        android:id="@+id/explain_breath_bpm_content"
			        android:layout_height="wrap_content"
			        android:layout_width="wrap_content"
			        android:layout_marginLeft="20dp"
			        android:text="@string/explain_content_breath_bpm"
			        android:textSize="@dimen/explain_text_size_content"
			        android:textColor="@color/white"/>
                 
                 </LinearLayout>
                 
   	             <TextView 
			        android:id="@+id/explain_from"
			        android:layout_height="wrap_content"
			        android:layout_width="wrap_content"
			        android:layout_marginLeft="20dp"
			        android:textSize="@dimen/explain_text_size_content"
			        android:text="@string/explain_from"
			        android:textColor="@color/white"
			        android:layout_marginTop="80dp"
			        android:layout_marginRight="10dp"
			        android:layout_marginBottom="10dp"/>
          
            
            </LinearLayout>
         
   	</ScrollView>
   	
    	

</RelativeLayout>
