<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
 
    <RelativeLayout
        android:id="@+id/connectingRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp" >

        <ImageView
            android:id="@+id/connectImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/tuoyuan" />

        <ImageView
            android:id="@+id/progressImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/lightline2" />
        
         <LinearLayout
            android:id="@+id/clicktostart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

		       <TextView
		           android:id="@+id/clicktodeviceconnected"
		           android:layout_width="wrap_content"
		           android:layout_height="wrap_content"
		           android:layout_gravity="center_horizontal"
		           android:text="@string/click_start"
		           android:textSize="@dimen/common_device_status_text_size"
		           android:textColor="@color/white" />
         </LinearLayout>
        
  

       <LinearLayout
            android:id="@+id/connectInfoLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:visibility="gone">

	       <TextView
	           android:id="@+id/checkingNetworkTextView"
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:layout_gravity="center_horizontal"
	           android:text="@string/start_connect"
	           android:textColor="@color/white" 
	           android:textSize="@dimen/common_device_status_text_size"/>
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/checkdeviceLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:visibility="gone">

	       <TextView
	           android:id="@+id/checkdeviceTextView"
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:layout_gravity="center_horizontal"
	           android:text="@string/check_device"
	           android:textColor="@color/white"
	           android:textSize="@dimen/common_device_status_text_size" />
        </LinearLayout>
        
         <LinearLayout
            android:id="@+id/checkdevicefailedLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:visibility="gone">

	       <TextView
	           android:id="@+id/checkdevicefailedTextView"
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:layout_gravity="center_horizontal"
	           android:text="@string/check_device_fail"
	           android:textColor="@color/white"
	           android:textSize="@dimen/common_device_status_text_size" />
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/connectedSucceedLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:visibility="gone">

             <TextView
                android:id="@+id/connectedStatusTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_gravity="center_horizontal"
                android:lineSpacingExtra="2dp"
				android:lineSpacingMultiplier="1"
                android:gravity="center_horizontal"
                android:text="@string/connecting_device_success"
                android:textColor="@color/white"
                android:textSize="@dimen/common_device_status_text_size" />

        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/syncdataLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:visibility="gone">
	       
		       <TextView
		           android:id="@+id/syncDataTextView"
		           android:layout_width="wrap_content"
		           android:layout_height="wrap_content"
		           android:layout_gravity="center_horizontal"
		           android:text="@string/connecting_device_sync_data"
		           android:textColor="@color/white"
		           android:textSize="@dimen/common_device_status_text_size" />
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/syncdatafailedLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:visibility="gone">
	       
		       <TextView
		           android:id="@+id/syncDatafailedTextView"
		           android:layout_width="wrap_content"
		           android:layout_height="wrap_content"
		           android:layout_gravity="center_horizontal"
		           android:text="@string/connecting_device_sync_data_fail" 
		           android:textColor="@color/white"
		           android:textSize="@dimen/common_device_status_text_size"/>
        </LinearLayout>
        
        
        <LinearLayout
            android:id="@+id/connectedFailedLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:visibility="gone">

             <TextView
                android:id="@+id/connectedFailedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_gravity="center_horizontal"
                android:lineSpacingExtra="2dp"
				android:lineSpacingMultiplier="1"
                android:gravity="center_horizontal"
                android:text="@string/connecting_device_fail"
                android:textColor="@color/white"
                android:textSize="@dimen/common_device_status_text_size" />

        </LinearLayout>

    </RelativeLayout>
    
        <TextView 
            android:id="@+id/user_notify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/connectingRelativeLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="@dimen/common_device_status_text_size" 
            android:text="@string/user_notify"
            android:visibility="gone"/>

</RelativeLayout>