<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res/com.aizi.xiaohuhu" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/userloginbackground"
    tools:context="${relativePackage}.${activityClass}" >
    
    
     <com.aizi.xiaohuhu.view.TopBarView  
        android:id="@+id/topbar"  
        android:layout_width="match_parent"  
        android:layout_height="wrap_content"  
        android:layout_marginTop="10dp"
        custom:titleText="@string/register_user_account"   
        custom:titleSize="8sp"   
        custom:titleColor="@android:color/white"   
        custom:leftBtn="@drawable/smarthome_add_device_back_nor"/> 

     <LinearLayout
            android:id="@+id/register_password_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="vertical" >
            
            <RelativeLayout
                android:id="@+id/register_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="@drawable/logininfobackground">
                
                <ImageView 
                    android:id="@+id/register_phonenumber_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:paddingLeft="10dp"
                    android:layout_gravity="center"
                    android:src="@drawable/username"/>
                
                <AutoCompleteTextView
	                android:id="@+id/register_phonenumber"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:hint="@string/prompt_phonenumber"
	                android:layout_toRightOf="@id/register_phonenumber_img"
	                android:inputType="phone"
	                android:background="@null"
	                android:paddingTop="10dp"
                    android:paddingLeft="10dp"
	                android:maxLines="1"
	                android:singleLine="true" />
                
            </RelativeLayout>
            
             <ImageView 
                    android:id="@+id/center_line_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/centerline"/>

            
            <RelativeLayout 
                android:id="@+id/register_check_code"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="@drawable/logininfobackground">
                
                 <ImageView 
                    android:id="@+id/register_check_code_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:paddingLeft="10dp"
                    android:layout_gravity="center"
                    android:src="@drawable/passcode"/>
                 
                 <EditText
	                android:id="@+id/register_check_code_text"
	                android:layout_width="200dp"
	                android:layout_height="wrap_content"
	                android:hint="@string/prompt_checkcode"
	                android:layout_toRightOf="@id/register_check_code_img"
	                android:maxLines="1"
	                android:paddingTop="10dp"
                    android:paddingLeft="10dp"
	                android:background="@null"
	                android:singleLine="true" />
                 
                 <Button
                     android:id="@+id/send_check_code"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:layout_toRightOf="@id/register_check_code_text"
                     android:layout_alignParentRight="true"
                     android:text="发送校验码"
                     android:textSize="12sp"></Button>
                
            </RelativeLayout>
            

             <ImageView 
                    android:id="@+id/center_line_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/centerline"/>

            
            <RelativeLayout 
                android:id="@+id/register_password"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="@drawable/logininfobackground">
                
                 <ImageView 
                    android:id="@+id/register_password_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:paddingLeft="10dp"
                    android:layout_gravity="center"
                    android:src="@drawable/passcode"/>
                 
                 <EditText
	                android:id="@+id/register_password_text"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:hint="@string/prompt_register_password"
	                android:imeActionId="@+id/login"
	                android:imeActionLabel="@string/action_sign_in_short"
	                android:imeOptions="actionUnspecified"
	                android:inputType="textPassword"
	                android:layout_toRightOf="@id/register_password_img"
	                android:maxLines="1"
	                android:paddingTop="10dp"
                    android:paddingLeft="10dp"
	                android:background="@null"
	                android:singleLine="true" />
                
            </RelativeLayout>
           

            <Button
                android:id="@+id/phone_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_register"
                android:textStyle="bold" />
            
      
        </LinearLayout>

</RelativeLayout>
