<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/userloginbackground"
    android:alpha="80"
    tools:context="com.aizi.yingerbao.LoginActivity" >

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical" >
            
                           
       <ImageView 
            android:id="@+id/center_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/yingerbao_512"/>
            
            <RelativeLayout
                android:id="@+id/login_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/logininfobackground">
                
                <ImageView 
                    android:id="@+id/phonenumber_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:paddingLeft="10dp"
                    android:layout_gravity="center"
                    android:src="@drawable/username"/>
                
                <AutoCompleteTextView
	                android:id="@+id/phonenumber"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:hint="@string/prompt_phonenumber"
	                android:layout_toRightOf="@id/phonenumber_img"
	                android:inputType="phone"
	                android:background="@null"
	                android:paddingTop="10dp"
                    android:paddingLeft="10dp"
	                android:maxLines="1"
	                android:singleLine="true" />
                
            </RelativeLayout>
            
             <ImageView 
                    android:id="@+id/center_line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/centerline"/>

            
            <RelativeLayout 
                android:id="@+id/login_password"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="@drawable/logininfobackground">
                
                 <ImageView 
                    android:id="@+id/password_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:paddingLeft="10dp"
                    android:layout_gravity="center"
                    android:src="@drawable/passcode"/>
                 
                 <EditText
	                android:id="@+id/password"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:hint="@string/prompt_password"
	                android:imeActionId="@+id/login"
	                android:imeActionLabel="@string/action_sign_in_short"
	                android:imeOptions="actionUnspecified"
	                android:inputType="textPassword"
	                android:layout_toRightOf="@id/password_img"
	                android:maxLines="1"
	                android:paddingTop="10dp"
                    android:paddingLeft="10dp"
	                android:background="@null"
	                android:singleLine="true" />
                
            </RelativeLayout>

            <Button
                android:id="@+id/phone_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:textColor="@color/gray"
                android:background="@color/login_user" />
            
       <RelativeLayout 
           android:id="@+id/user_action"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:paddingTop="20dp">
                 
           <ImageView 
               android:id="@+id/forget_password"
               android:layout_height="20dp"
               android:layout_width="70dp"
               android:background="@drawable/forget_password"
               android:layout_alignParentLeft="true"/>
           
            <ImageView 
               android:id="@+id/register_account"
               android:layout_height="20dp"
               android:layout_width="70dp"
               android:background="@drawable/signin_account"
               android:layout_alignParentRight="true"/>
           
       </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
